Gotvo add, delete, update
